@@ -22,6 +22,8 @@ import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
+import org.apache.kafka.clients.consumer.internals.AsyncKafkaConsumer;
+import org.apache.kafka.clients.consumer.internals.StreamsRebalanceData;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.Producer;
 import org.apache.kafka.common.Metric;
@@ -46,6 +48,7 @@ import org.apache.kafka.streams.StreamsConfig;
 import org.apache.kafka.streams.Topology;
 import org.apache.kafka.streams.integration.utils.EmbeddedKafkaCluster;
 import org.apache.kafka.streams.integration.utils.IntegrationTestUtils;
+import org.apache.kafka.streams.internals.ConsumerWrapper;
 import org.apache.kafka.streams.kstream.Consumed;
 import org.apache.kafka.streams.kstream.Produced;
 import org.apache.kafka.streams.processor.api.Processor;
@@ -62,7 +65,6 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -83,7 +85,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.apache.kafka.common.utils.Utils.mkEntry;
@@ -111,13 +112,23 @@ public class KafkaStreamsTelemetryIntegrationTest {
     private  KeyValueIterator<String, String> globalStoreIterator;
 
     private static EmbeddedKafkaCluster cluster;
-    private static final List<TestingMetricsInterceptingConsumer<byte[], byte[]>> INTERCEPTING_CONSUMERS = new ArrayList<>();
+    private static final List<TestingMetricsInterceptor> INTERCEPTING_CONSUMERS = new ArrayList<>();
     private static final List<TestingMetricsInterceptingAdminClient> INTERCEPTING_ADMIN_CLIENTS = new ArrayList<>();
     private static final int NUM_BROKERS = 3;
     private static final int FIRST_INSTANCE_CLIENT = 0;
     private static final int SECOND_INSTANCE_CLIENT = 1;
     private static final Logger LOG = LoggerFactory.getLogger(KafkaStreamsTelemetryIntegrationTest.class);
 
+    static Stream<Arguments> recordingLevelParameters() {
+        return Stream.of(
+            Arguments.of("INFO", "classic"),
+            Arguments.of("DEBUG", "classic"),
+            Arguments.of("TRACE", "classic"),
+            Arguments.of("INFO", "streams"),
+            Arguments.of("DEBUG", "streams"),
+            Arguments.of("TRACE", "streams")
+        );
+    }
 
     @BeforeAll
     public static void startCluster() throws IOException {
@@ -161,9 +172,9 @@ public class KafkaStreamsTelemetryIntegrationTest {
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {"INFO", "DEBUG", "TRACE"})
-    public void shouldPushGlobalThreadMetricsToBroker(final String recordingLevel) throws Exception {
-        streamsApplicationProperties = props(true);
+    @MethodSource("recordingLevelParameters")
+    public void shouldPushGlobalThreadMetricsToBroker(final String recordingLevel, final String groupProtocol) throws Exception {
+        streamsApplicationProperties = props(true, groupProtocol);
         streamsApplicationProperties.put(StreamsConfig.METRICS_RECORDING_LEVEL_CONFIG, recordingLevel);
         final Topology topology = simpleTopology(true);
         subscribeForStreamsMetrics();
@@ -199,10 +210,10 @@ public class KafkaStreamsTelemetryIntegrationTest {
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {"INFO", "DEBUG", "TRACE"})
-    public void shouldPushMetricsToBroker(final String recordingLevel) throws Exception {
+    @MethodSource("recordingLevelParameters")
+    public void shouldPushMetricsToBroker(final String recordingLevel, final String groupProtocol) throws Exception {
         // End-to-end test validating metrics pushed to broker
-        streamsApplicationProperties  = props(true);
+        streamsApplicationProperties  = props(true, groupProtocol);
         streamsApplicationProperties.put(StreamsConfig.METRICS_RECORDING_LEVEL_CONFIG, recordingLevel);
         final Topology topology = simpleTopology(false);
         subscribeForStreamsMetrics();
@@ -236,7 +247,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
                         final String group = mn.group().replace("-metrics", "").replace('-', '.');
                         return "org.apache.kafka." + group + "." + name;
                     }).filter(name -> !name.equals("org.apache.kafka.stream.thread.state"))// telemetry reporter filters out string metrics
-                    .sorted().collect(Collectors.toList());
+                    .sorted().toList();
             final List<String> actualMetrics = new ArrayList<>(TelemetryPlugin.SUBSCRIBED_METRICS.get(mainConsumerInstanceId));
             assertEquals(expectedMetrics, actualMetrics);
 
@@ -264,9 +275,9 @@ public class KafkaStreamsTelemetryIntegrationTest {
 
     @ParameterizedTest
     @MethodSource("singleAndMultiTaskParameters")
-    public void shouldPassMetrics(final String topologyType, final boolean stateUpdaterEnabled) throws Exception {
+    public void shouldPassMetrics(final String topologyType, final boolean stateUpdaterEnabled, final String groupProtocol) throws Exception {
         // Streams metrics should get passed to Admin and Consumer
-        streamsApplicationProperties = props(stateUpdaterEnabled);
+        streamsApplicationProperties = props(stateUpdaterEnabled, groupProtocol);
         final Topology topology = topologyType.equals("simple") ? simpleTopology(false) : complexTopology();
        
         try (final KafkaStreams streams = new KafkaStreams(topology, streamsApplicationProperties)) {
@@ -280,7 +291,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
 
 
 
-            final List<MetricName> consumerPassedStreamThreadMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName).toList();
+            final List<MetricName> consumerPassedStreamThreadMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics().stream().map(KafkaMetric::metricName).toList();
             final List<MetricName> adminPassedStreamClientMetricNames = INTERCEPTING_ADMIN_CLIENTS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName).toList();
 
 
@@ -294,14 +305,14 @@ public class KafkaStreamsTelemetryIntegrationTest {
 
     @ParameterizedTest
     @MethodSource("multiTaskParameters")
-    public void shouldPassCorrectMetricsDynamicInstances(final boolean stateUpdaterEnabled) throws Exception {
+    public void shouldPassCorrectMetricsDynamicInstances(final boolean stateUpdaterEnabled, final String groupProtocol) throws Exception {
         // Correct streams metrics should get passed with dynamic membership
-        streamsApplicationProperties = props(stateUpdaterEnabled);
+        streamsApplicationProperties = props(stateUpdaterEnabled, groupProtocol);
         streamsApplicationProperties.put(StreamsConfig.STATE_DIR_CONFIG, TestUtils.tempDirectory(appId).getPath() + "-ks1");
         streamsApplicationProperties.put(StreamsConfig.CLIENT_ID_CONFIG, appId + "-ks1");
 
 
-        streamsSecondApplicationProperties = props(stateUpdaterEnabled);
+        streamsSecondApplicationProperties = props(stateUpdaterEnabled, groupProtocol);
         streamsSecondApplicationProperties.put(StreamsConfig.STATE_DIR_CONFIG, TestUtils.tempDirectory(appId).getPath() + "-ks2");
         streamsSecondApplicationProperties.put(StreamsConfig.CLIENT_ID_CONFIG, appId + "-ks2");
         
@@ -313,7 +324,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
             final List<MetricName> streamsTaskMetricNames = streamsOne.metrics().values().stream().map(Metric::metricName)
                     .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
 
-            final List<MetricName> consumerPassedStreamTaskMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName)
+            final List<MetricName> consumerPassedStreamTaskMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics().stream().map(KafkaMetric::metricName)
                     .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
 
             /*
@@ -350,9 +361,9 @@ public class KafkaStreamsTelemetryIntegrationTest {
                         .filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
                 
                 final List<MetricName> consumerOnePassedTaskMetrics = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT)
-                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).toList();
                 final List<MetricName> consumerOnePassedStateMetrics = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT)
-                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
+                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
 
                 final List<MetricName> streamsTwoTaskMetrics = streamsTwo.metrics().values().stream().map(Metric::metricName)
                         .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
@@ -360,9 +371,9 @@ public class KafkaStreamsTelemetryIntegrationTest {
                         .filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
                 
                 final List<MetricName> consumerTwoPassedTaskMetrics = INTERCEPTING_CONSUMERS.get(SECOND_INSTANCE_CLIENT)
-                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).toList();
                 final List<MetricName> consumerTwoPassedStateMetrics = INTERCEPTING_CONSUMERS.get(SECOND_INSTANCE_CLIENT)
-                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
+                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
                 /*
                  Confirm pre-existing KafkaStreams instance one only passes metrics for its tasks and has no metrics for previous tasks
                  */
@@ -392,10 +403,11 @@ public class KafkaStreamsTelemetryIntegrationTest {
         }
     }
 
-    @Test
-    public void passedMetricsShouldNotLeakIntoClientMetrics() throws Exception {
+    @ParameterizedTest
+    @ValueSource(strings = {"classic", "streams"})
+    public void passedMetricsShouldNotLeakIntoClientMetrics(final String groupProtocol) throws Exception {
         // Streams metrics should not be visible in client metrics
-        streamsApplicationProperties = props(true);
+        streamsApplicationProperties = props(true, groupProtocol);
         final Topology topology =  complexTopology();
 
         try (final KafkaStreams streams = new KafkaStreams(topology, streamsApplicationProperties)) {
@@ -424,27 +436,41 @@ public class KafkaStreamsTelemetryIntegrationTest {
             clientMetricsService.alterClientMetrics(commandOptions);
         }
     }
+
     private List<String> getTaskIdsAsStrings(final KafkaStreams streams) {
         return streams.metadataForLocalThreads().stream()
                 .flatMap(threadMeta -> threadMeta.activeTasks().stream()
                         .map(taskMeta -> taskMeta.taskId().toString()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Stream<Arguments> singleAndMultiTaskParameters() {
-        return Stream.of(Arguments.of("simple", true),
-                Arguments.of("simple", false),
-                Arguments.of("complex", true),
-                Arguments.of("complex", false));
+        return Stream.of(
+            Arguments.of("simple", true, "classic"),
+            Arguments.of("simple", false, "classic"),
+            Arguments.of("complex", true, "classic"),
+            Arguments.of("complex", false, "classic"),
+            Arguments.of("simple", true, "streams"),
+            Arguments.of("simple", false, "streams"),
+            Arguments.of("complex", true, "streams"),
+            Arguments.of("complex", false, "streams")
+        );
     }
 
     private static Stream<Arguments> multiTaskParameters() {
-        return Stream.of(Arguments.of(true),
-                Arguments.of(false));
+        return Stream.of(
+            Arguments.of(true, "classic"),
+            Arguments.of(false, "classic"),
+            Arguments.of(true, "streams"),
+            Arguments.of(false, "streams")
+        );
     }
 
-    private Properties props(final boolean stateUpdaterEnabled) {
-        return props(mkObjectProperties(mkMap(mkEntry(StreamsConfig.InternalConfig.STATE_UPDATER_ENABLED, stateUpdaterEnabled))));
+    private Properties props(final boolean stateUpdaterEnabled, final String groupProtocol) {
+        return props(mkObjectProperties(mkMap(
+            mkEntry(StreamsConfig.InternalConfig.STATE_UPDATER_ENABLED, stateUpdaterEnabled),
+            mkEntry(StreamsConfig.GROUP_PROTOCOL_CONFIG, groupProtocol)
+        )));
     }
 
     private Properties props(final Properties extraProperties) {
@@ -456,6 +482,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
         streamsConfiguration.put(StreamsConfig.DEFAULT_KEY_SERDE_CLASS_CONFIG, Serdes.StringSerde.class);
         streamsConfiguration.put(StreamsConfig.DEFAULT_VALUE_SERDE_CLASS_CONFIG, Serdes.StringSerde.class);
         streamsConfiguration.put(StreamsConfig.DEFAULT_CLIENT_SUPPLIER_CONFIG, TestClientSupplier.class);
+        streamsConfiguration.put(StreamsConfig.InternalConfig.INTERNAL_CONSUMER_WRAPPER, TestConsumerWrapper.class);
         streamsConfiguration.put(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
         streamsConfiguration.putAll(extraProperties);
         return streamsConfiguration;
@@ -546,9 +573,23 @@ public class KafkaStreamsTelemetryIntegrationTest {
         }
     }
 
-    public static class TestingMetricsInterceptingConsumer<K, V> extends KafkaConsumer<K, V> {
+    public static class TestConsumerWrapper extends ConsumerWrapper {
+        @Override
+        public void wrapConsumer(final AsyncKafkaConsumer<byte[], byte[]> delegate, final Map<String, Object> config, final Optional<StreamsRebalanceData> streamsRebalanceData) {
+            final TestingMetricsInterceptingAsynConsumer<byte[], byte[]> consumer = new TestingMetricsInterceptingAsynConsumer<>(config, new ByteArrayDeserializer(), new ByteArrayDeserializer(), streamsRebalanceData);
+            INTERCEPTING_CONSUMERS.add(consumer);
 
-        public List<KafkaMetric> passedMetrics = new ArrayList<>();
+            super.wrapConsumer(consumer, config, streamsRebalanceData);
+        }
+    }
+
+    public interface TestingMetricsInterceptor {
+        List<KafkaMetric> passedMetrics();
+        Map<MetricName, ? extends Metric> metrics();
+    }
+
+    public static class TestingMetricsInterceptingConsumer<K, V> extends KafkaConsumer<K, V> implements TestingMetricsInterceptor {
+        private final List<KafkaMetric> passedMetrics = new ArrayList<>();
 
         public TestingMetricsInterceptingConsumer(final Map<String, Object> configs, final Deserializer<K> keyDeserializer, final Deserializer<V> valueDeserializer) {
             super(configs, keyDeserializer, valueDeserializer);
@@ -564,6 +605,48 @@ public class KafkaStreamsTelemetryIntegrationTest {
         public void unregisterMetricFromSubscription(final KafkaMetric metric) {
             passedMetrics.remove(metric);
             super.unregisterMetricFromSubscription(metric);
+        }
+
+        @Override
+        public List<KafkaMetric> passedMetrics() {
+            return passedMetrics;
+        }
+    }
+
+    public static class TestingMetricsInterceptingAsynConsumer<K, V> extends AsyncKafkaConsumer<K, V> implements TestingMetricsInterceptor {
+        private final List<KafkaMetric> passedMetrics = new ArrayList<>();
+
+        public TestingMetricsInterceptingAsynConsumer(
+            final Map<String, Object> configs,
+            final Deserializer<K> keyDeserializer,
+            final Deserializer<V> valueDeserializer,
+            final Optional<StreamsRebalanceData> streamsRebalanceData
+        ) {
+            super(
+                new ConsumerConfig(
+                    ConsumerConfig.appendDeserializerToConfig(configs, keyDeserializer, valueDeserializer)
+                ),
+                keyDeserializer,
+                valueDeserializer,
+                streamsRebalanceData
+            );
+        }
+
+        @Override
+        public void registerMetricForSubscription(final KafkaMetric metric) {
+            passedMetrics.add(metric);
+            super.registerMetricForSubscription(metric);
+        }
+
+        @Override
+        public void unregisterMetricFromSubscription(final KafkaMetric metric) {
+            passedMetrics.remove(metric);
+            super.unregisterMetricFromSubscription(metric);
+        }
+
+        @Override
+        public List<KafkaMetric> passedMetrics() {
+            return passedMetrics;
         }
     }
 
@@ -626,7 +709,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
                         .flatMap(sm -> sm.getMetricsList().stream())
                         .map(org.apache.kafka.shaded.io.opentelemetry.proto.metrics.v1.Metric::getName)
                         .sorted()
-                        .collect(Collectors.toList());
+                        .toList();
                 LOG.info("Found metrics {} for clientId={}", metricNames, clientId);
                 SUBSCRIBED_METRICS.put(clientId, metricNames);
             } catch (final Exception e) {
